# centipede

./: .gitignore  CHEATSHEET.md  README.md  TODO.md  dev-requirements.txt  justfile  minipat_config.lua  pyproject.toml
.github/workflows/: python-ci.yaml
bad_actor/: __init__.py
centipede/: actor.py  common.py  heap.py  main.py  midi.py  minipat.py  oldpar.py  tracker.py  wavgen.py
centipede/minipat/: arc.py  ev.py  parser.py  pat.py  printer.py  stream.py
centipede/spiny/: __init__.py  array.py  common.py  heap.py  heapmap.py  map.py  seq.py  set.py
demo/: demo.minipat
minipat/: __init__.py  arc.py  arrow.py  boot.py  chords.py  combinators.py  common.py  compose.py  constants.py  dsl.py  ev.py  example.py  fileio.py  fluid.py  kit.py  live.py  messages.py  midi.py  mon.py  offline.py  parser.py  pat.py  pat_dag.py  printer.py  reflect.py  setup.py  stream.py  tab.py  time.py  timing_diagnostics.py  types.py
minipat-nvim/: README.md
minipat-nvim/lua/: minipat.lua
minipat-nvim/lua/minipat/: process.lua  window.lua
minipat/examples/: api.py  blove.py  lilypond_tab.py  offline.py
minipat/hw/: common.py  fluid.py  sc88.py
pushpluck/: __init__.py  base.py  color.py  component.py  config.py  constants.py  fretboard.py  main.py  menu.py  midi.py  pads.py  plucked.py  port_manager.py  pos.py  push.py  scale.py  shadow.py  viewport.py
spiny/: __init__.py  array.py  arrow.py  common.py  dmap.py  heap.py  heapmap.py  isomap.py  map.py  seq.py  set.py
tests/bad_actor/: test_actor.py  test_actor_errors.py
tests/centipede/: test_actor.py  test_actor_errors.py  test_dummy.py  test_seq.py
tests/centipede/minipat/: test_arc.py  test_ev.py  test_parser.py  test_pat.py  test_roundtrip.py  test_stream.py
tests/centipede/spiny/: hypo.py  test_array.py  test_array_prop.py  test_common.py  test_heap.py  test_heap_prop.py  test_heapmap.py  test_heapmap_prop.py  test_map.py  test_map_prop.py  test_seq.py  test_seq_prop.py  test_set.py  test_set_prop.py
tests/minipat/: test_arc.py  test_arrow.py  test_chord_voicings.py  test_chords.py  test_compat.py  test_compose.py  test_dsl.py  test_ev.py  test_fluid.py  test_fractional_speed.py  test_kit.py  test_midi.py  test_midi_integration.py  test_offline.py  test_parser.py  test_pat.py  test_reflect.py  test_reflect_prop.py  test_roundtrip.py  test_stream.py  test_stream_errors.py  test_stream_methods.py  test_tab.py
tests/pushpluck/: test_scale.py  test_viewport.py
tests/spiny/: hypo.py  test_array.py  test_array_prop.py  test_common.py  test_dmap.py  test_heap.py  test_heap_prop.py  test_heapmap.py  test_heapmap_prop.py  test_isomap.py  test_map.py  test_map_prop.py  test_seq.py  test_seq_prop.py  test_set.py  test_set_prop.py
