[project]
name = "hello-world"
version = "0.1.0"
description = "a python synth/tracker"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mido>=1.3.3",
    "numpy>=2.3.1",
    "plotext>=5.3.2",
    "polars>=1.31.0",
    "pygame>=2.6.1",
]

[dependency-groups]
dev = [
    "ipython>=9.3.0",
    "isort>=6.0.1",
    "mypy>=1.16.1",
    "pytest>=8.4.1",
    "ruff>=0.12.1",
]

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_context = true
show_column_numbers = true

[tool.flake8]
exclude = [".venv"]
max-line-length = 120
ignore = []

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["centipede"]

