[project]
name = "centipede"
authors = [{name = "Eric Conlon"}]
version = "0.1.0"
description = "a python synth/tracker"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lark>=1.2.2",
    "numpy>=2.3.1",
    "plotext>=5.3.2",
    "mido>=1.3.3",
    "python-rtmidi",
]

[dependency-groups]
dev = [
    "hypothesis>=6.135.26",
    "ipython>=9.3.0",
    "isort>=6.0.1",
    "mypy>=1.16.1",
    "pdoc>=15.0.4",
    "pytest>=8.4.1",
    "pytest-xdist>=3.8.0",
    "ruff>=0.12.1",
]

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_context = true
show_column_numbers = true

[tool.flake8]
exclude = [".venv"]
max-line-length = 120
ignore = []

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["centipede", "tests"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::pytest.PytestUnhandledThreadExceptionWarning"
]

[tool.uv.sources]
python-rtmidi = { git = "https://github.com/ejconlon/python-rtmidi", rev = "20d89ceb79fc4c18af197aaf6a8223a06160bf17" }

